kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zwave
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-certificate
    kuberentes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-allowlist-local@kubernetescrd,kube-system-http-redirect-to-https@kubernetescrd
spec:
  tls:
  - hosts:
    - zwave.devleitner.com
    secretName: clusterissuer.letsencrypt.key.tls
  rules:
    - host: zwave.devleitner.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: zwave
              port: 
                name: http
